@@ -8,13 +8,12 @@ import org.springframework.security.config.annotation.method.configuration.Enabl
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
-import org.springframework.security.oauth2.jwt.JwtDecoder;
-import org.springframework.security.oauth2.jwt.JwtDecoders;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import java.util.List;
+
+import java.util.Arrays;
 
 @Configuration
 @EnableWebSecurity
@@ -30,32 +29,14 @@ public class SecurityConfig {
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-                // 1. (TỪ FILE MỚI) Kích hoạt CORS bằng bean ở dưới
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-
-                // 2. Tắt CSRF (vì chúng ta dùng API stateless)
                 .csrf(csrf -> csrf.disable())
-
-                // 3. Cấu hình Session STATELESS (không lưu session)
                 .sessionManagement(session ->
                         session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)
                 )
-
-                // 4. Cấu hình ủy quyền (Authorization)
-                .authorizeHttpRequests(authorize -> authorize
-                        // (Đây là các endpoint ĐÚNG cho project của bạn)
-                        .requestMatchers("/api/v1/auth/login").permitAll()
-                        .requestMatchers("/api/v1/auth/refresh-token").permitAll()
-                        .requestMatchers("/api/v1/signup/**").permitAll()
-
-                        // (Tùy chọn) Mở Swagger (nếu bạn dùng)
-                        .requestMatchers("/v3/api-docs/**", "/swagger-ui/**").permitAll()
-
-                        // 3b. Tất cả các đường dẫn /api/ còn lại PHẢI xác thực
-                        .requestMatchers("/api/**").authenticated()
-
-                        // 3c. Bất kỳ request nào khác (ví dụ: "/") cũng mở
-                        .anyRequest().permitAll()
+                .authorizeHttpRequests(auth -> auth
+                        .requestMatchers("/api/auth/**", "/error", "/actuator/**").permitAll()
+                        .anyRequest().authenticated()
                 )
 
                 // 5. Cấu hình là một Resource Server (để xác thực JWT)
@@ -69,25 +50,17 @@ public class SecurityConfig {
         return http.build();
     }
 
-    // *** (TỪ FILE MỚI) ĐỊNH NGHĨA BEAN CORS ***
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        // (Đây là cấu hình an toàn hơn cho dev)
-        configuration.setAllowedOrigins(List.of("http://localhost:3000", "http://localhost:5173"));
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("*")); // Cho phép mọi header
-        configuration.setAllowCredentials(true); // Cho phép cookie (nếu cần)
+        configuration.setAllowedOrigins(Arrays.asList("http://localhost:3000", "http://localhost:4200"));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowCredentials(true);
+        configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration); // Áp dụng cho mọi đường dẫn
+        source.registerCorsConfiguration("/**", configuration);
         return source;
-    }
-
-    // *** (TỪ FILE CŨ) ĐỊNH NGHĨA BEAN JWTDECODER ***
-    @Bean
-    public JwtDecoder jwtDecoder() {
-        // Đây là "best practice" cho Spring Boot 3
-        return JwtDecoders.fromOidcIssuerLocation(issuerUri);
     }
 }
